supplier and required fields